tests/fixtures/errors/private_redefine.z
# `private:` cannot be redefined -- private always includes every member.
vault: class { value: i64 } as {
    private: unit { :value }
    peek: function {:this} out i64 is { return this.value }
}
main: function is { with v: (vault value: 7) do print "\{v.peek}" }
